  - Volkslogger: support DAeC keyhole declaration
* calculations
  - use maximum speed configured in plane setup as limit for calculations
  - use WGS84 earth ellipsoid for distance calculations (#2809)
  - simplified EKF wind algorithm
* airspace cross-section
  - sync map & cross-section view zoom setting (#2913)
* infoboxes
  - add "Fin MC0 AltD" infobox (#2824)
* task editor
  - added one-click task reversal (#1730)
  - show name of loaded/saved tasks in dialog title (#1924)
* user interface 
  - checklist remembers last opened list (#3110)
  - display rotation for Raspberry Pi and Cubieboard (#3238)
  - use /dev/input/event* on Raspberry Pi and Cubieboard (#3179)
  - support mouse wheel on Raspberry Pi and Cubieboard
  - scale touchscreen coordinates to screen size
* Android
  - fix IOIO connection on Android 4.x (#2959, #3260)
* Kobo
  - add UI allowing the start of external scripts to KoboMenu (#3194)
  - support Wifi with WEP (#3138)
  - support USB-OTG
  - export data partition via USB storage

Version 6.7.6 - not yet released
* devices
  - LX: relax download timeout (#3199)

Version 6.7.5 - 2014/06/09
* fix crash in task manager (#3305)
* work around crash on Windows (PC) (#3284)
* devices
  - fixed attitude data handling
  - properly detect LXNAV Nano 3
  - FLARM: fix declaration with asterisk in task point name (#3323)
* airspace
  - assume all airspaces are active if day of week is not known
  - restore "Repetitive Sound" setting on startup (#3308)
* Android
  - fix crash when opening IOIO port (#3309)
  - allow reconnecting IOIO sensors
* tasks
  - fix loading of some tasks from .cup files

Version 6.7.4 - 2014/04/11
* map
  - fix topography rendering for polygon shapes (#3245)
  - fix SDL clipped polygon rendering algorithm (#3250)
* devices
  - Westerboer: ignore implausible values from buggy devices
* logger
  - create "logs" directory automatically for external flight downloads
* user interface