@@ -17,6 +17,7 @@ Version 6.8 - not yet released
   - sync map & cross-section view zoom setting (#2913)
 * infoboxes
   - add "Fin MC0 AltD" infobox (#2824)
+  - add "Next arrow" infobox (#3128)
 * task editor
   - added one-click task reversal (#1730)
   - show name of loaded/saved tasks in dialog title (#1924)
